exercise with flexbox

--- a/Exercise Sets/Exercise 2/about.html
+++ b/Exercise Sets/Exercise 2/about.html
@@ -1,1 +1,31 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <title>About Me</title>
+</head>
+<body>
+    <h1>Get to Know Me!</h1>
+    <div class="flex-container">
+        <div class="flex-child">
+            <span class="material-icons">person</span>
+            <h2>Basic Info</h2>
+            <p>Name: Sherivic Mae E. Dimagculang</p>
+            <p>Date of Birth: May 26, 2004</p>
+        </div>
+        <div class="flex-child">
+            <span class="material-icons">email</span>
+            <h2>Contact</h2>
+            <p>Email: 22-01294@g.batstate-u.edu.ph</p>
+            <p>GitHub: github.com/sherivicmae</p>
+        </div>
+        <div class="flex-child">
+            <span class="material-icons">favorite</span>
+            <h2>Personal Info</h2>
+            <p>Hobbies: Coding, Watching K-Dramas, Shopping</p>
+            <p>Location: Philippines</p>
+        </div>
+    </div>
+</body>
+</html>
