created visionboard using flexbox

--- a/Laboratory Activities/Laboratory Activity 2 - (04-10-24)/visionboard.html
+++ b/Laboratory Activities/Laboratory Activity 2 - (04-10-24)/visionboard.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Vision Board</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+</head>
+<body>
+    <header class="header">
+        <h1>Sherivic Mae's Vision Board</h1>
+    </header>
+    <div class="container">
 
+        <div class="content1">
+            <div class="box1"></div>
+            <div class="box2">
+                <h3>
+                    <span class="line">Current</span>
+                    <span class="line">Goals</span>
+                </h3>
+                <ul>
+                    <li><span class="material-symbols-outlined">laptop_chromebook</span> Code to Improve</li>
+                    <li><span class="material-symbols-outlined">prayer_times</span> Center God in Everything</li>
+                    <li><span class="material-symbols-outlined">local_library</span> Learn and Grow Everyday</li>
+                    <li><span class="material-symbols-outlined">favorite</span> Travel with Family</li>
+                    <li><span class="material-symbols-outlined">emoji_nature</span>Embrace Nature's Beauty</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="subContainer">
+
+            <div class="content2">
+                <div class="box3">
+                    <p>
+                        <img src="VisionBoard/dostScholar.png" alt="Scholar Icon" class="scholar-icon">
+                        <span class="text">
+                            <span class="line">I</span>
+                            <span class="line">am</span>
+                            <span class="line">Scholar</span>
+                        </span>
+                    </p>
+                </div>
+                <div class="box4">
+                    
+                </div>
+                <div class="box5"></div>
+                <div class="box6"></div>
+            </div>
+
+            <div class="content3">
+                <div class="box7"></div>
+            </div>
+            
+        </div>
+    </div>
+    <footer class="footer">
+        <p>Whatever it takes, make it happen.</p>
+    </footer>
+</body>
+</html>
