word and sentence counter

--- a/Laboratory Activities/Laboratory 3 - 19-11-24/index.html
+++ b/Laboratory Activities/Laboratory 3 - 19-11-24/index.html
@@ -1,1 +1,42 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>✨ My Word Counter ✨</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+<body>
+    <div class="stars"></div>
+    <div class="wrapper">
+        <div class="container">
+            <div class="ribbon">
+                <span class="ribbon-text">✨ Word Counter ✨</span>
+            </div>
+            <h2>
+                <i class="fas fa-heart heart-beat"></i> 
+                Word and Sentence Counter 
+                <i class="fas fa-heart heart-beat"></i>
+            </h2>
+            <textarea id="textInput" placeholder="✨ Enter your text here... ✨"></textarea>
+            <div class="counts-container">
+                <div id="wordCount" class="counter-box">
+                    <i class="fas fa-magic"></i>
+                    Words: 0
+                </div>
+                <div id="sentenceCount" class="counter-box">
+                    <i class="fas fa-star"></i>
+                    Sentences: 0
+                </div>
+            </div>
+            <div class="decoration">
+                <i class="fas fa-cloud cloud"></i>
+                <i class="fas fa-star star"></i>
+                <i class="fas fa-moon moon"></i>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
