--- a/Laboratory Activities/Laboratory Activity 4 - 29-11-24/index.html
+++ b/Laboratory Activities/Laboratory Activity 4 - 29-11-24/index.html
@@ -1,1 +1,190 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sherivic Mae's Personal Website</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+  <link rel="icon" href="images/icon.png" type="png">
+  <link rel="stylesheet" href="styles.css">
+  
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
+  <div id="home" class="hero">
+    <div class="content">
+      <h1>Hi! I am Sherivic Mae</h1>
+      <p>A 3rd-year Computer Science student passionate about coding, technology, and problem-solving.</p>
+      <div class="social-buttons">
+        <a href="https://www.facebook.com/sherivicmae.dimagculang" class="social-btn facebook" aria-label="Visit my Facebook profile">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com/sherivic.mae" class="social-btn instagram" aria-label="Visit my Instagram profile">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://github.com/sherivicmae" class="social-btn github" aria-label="Visit my GitHub profile">
+          <i class="fab fa-github"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div id="about" class="about-content">
+    <div class="text">
+      <h2>About Me</h2>
+      <p>As a third-year computer science student, I'm constantly exploring new technologies and honing my skills in coding, software development, and problem-solving. I'm excited about the future of tech, and I love working on projects that challenge me and allow me to learn.</p>
+    </div>
+  </div>
+
+  <div id="education" class="education">
+    <h2>My Educational Journey</h2>
+    <div class="timeline">
+        <div class="timeline-item">
+            <div class="timeline-content">
+              <h3>Junior High School</h3>
+              <p>Leuteboro National High School | Completed: 2020</p>
+              <p>Consistent Honor Student</p>
+            </div>
+        </div>
+        <div class="timeline-item">
+            <div class="timeline-content">
+                <h3>College</h3>
+                <p>Batangas State University | 2022 - Present</p>
+                <p>Bachelor of Science in Computer Science</p>
+              </div>
+        </div>
+        <div class="timeline-item">
+            <div class="timeline-content">
+                <h3>Senior High School</h3>
+                <p>Leuteboro National High School | Graduated: 2022</p>
+                <p>Consistent Honor Student from STEM Strand</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+  <div id="skills" class="skills">
+    <h2>Skills</h2>
+    <div class="skill-items">
+      <div class="skill-item">
+          <h3>Programming Languages</h3>
+          <div class="skill-progress">
+              <div class="skill-row">
+                  <span class="skill-name">C#</span>
+                  <div class="progress">
+                      <div class="progress-bar" style="width: 80%;" data-progress="80"></div>
+                  </div>
+              </div>
+          </div>
+          <div class="skill-progress">
+              <div class="skill-row">
+                  <span class="skill-name">Python</span>
+                  <div class="progress">
+                      <div class="progress-bar" style="width: 70%;" data-progress="70"></div>
+                  </div>
+              </div>
+          </div>
+          <div class="skill-progress">
+            <div class="skill-row">
+                <span class="skill-name">Java</span>
+                <div class="progress">
+                    <div class="progress-bar" style="width: 70%;" data-progress="70"></div>
+                </div>
+            </div>
+        </div>
+      </div>
+
+      <div class="skill-item">
+          <h3>Web Development</h3>
+          <div class="skill-progress">
+              <div class="skill-row">
+                  <span class="skill-name">HTML</span>
+                  <div class="progress">
+                      <div class="progress-bar" style="width: 90%;" data-progress="90"></div>
+                  </div>
+              </div>
+          </div>
+          <div class="skill-progress">
+              <div class="skill-row">
+                  <span class="skill-name">CSS</span>
+                  <div class="progress">
+                      <div class="progress-bar" style="width: 85%;" data-progress="85"></div>
+                  </div>
+              </div>
+          </div>
+          <div class="skill-progress">
+              <div class="skill-row">
+                  <span class="skill-name">React</span>
+                  <div class="progress">
+                      <div class="progress-bar" style="width: 75%;" data-progress="75"></div>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+      <div class="skill-item">
+          <h3>Soft Skills</h3>
+          <div class="skill-progress">
+              <div class="skill-row">
+                  <span class="skill-name">Problem-solving</span>
+                  <div class="progress">
+                      <div class="progress-bar" style="width: 85%;" data-progress="85"></div>
+                  </div>
+              </div>
+          </div>
+          <div class="skill-progress">
+              <div class="skill-row">
+                  <span class="skill-name">Teamwork</span>
+                  <div class="progress">
+                      <div class="progress-bar" style="width: 90%;" data-progress="90"></div>
+                  </div>
+              </div>
+          </div>
+          <div class="skill-progress">
+              <div class="skill-row">
+                  <span class="skill-name">Communication</span>
+                  <div class="progress">
+                      <div class="progress-bar" style="width: 80%;" data-progress="80"></div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+  </div>
+
+  <div id="contact" class="contact">
+    <h2>Contact</h2>
+    <div class="contact-info">
+      <div class="contact-item">
+        <i class="fas fa-envelope"></i>
+        <p>sherivicdimagculang26@gmail.com</p>
+      </div>
+      <div class="contact-item">
+        <i class="fab fa-linkedin"></i>
+        <p>linkedin.com/in/sherivic-mae</p>
+      </div>
+      <div class="contact-item">
+        <i class="fab fa-github"></i>
+        <p>github.com/sherivicmae</p>
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    <p>"You gonna know that you're One in a Million"</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
